--- a/less/index.less
+++ b/less/index.less
@@ -2,5 +2,6 @@
 @import "bootstrap.less";
 @import "responsive.less";
 @import "flamingo.less";
+@import "flamingo-project.less";
 //@import "1pxdeep.less";
 //@import "1pxdeep-project.less";
