--- a/less/scheme.less
+++ b/less/scheme.less
@@ -14,7 +14,7 @@
 ///////////////////////////
 
 // This color is used to generate the scheme
-@seed-color:#ed8c2b;
+@seed-color:#5186b8;
 
 //// Color wheel positions
 ///////////////////////////
@@ -68,7 +68,6 @@
 @sat:saturation(@seed-color);
 @luma:luma(@seed-color);
 @lit:lightness(@seed-color);
-@tone:grey(@seed-color);
 
 //// Color creation
 ///////////////////////////
